# TBD_LMS_Replit_v2

./: .gitignore  .replit  DEPLOYMENT.md  README.md  preflight.sh  pyproject.toml  replit.md  vite.config.js
attached_assets/: Pasted-Add-these-Manager-side-experiences-to-the-platform-while-keeping-every-previous-page-functional-and--1761849551469_1761849551469.txt  Pasted-Build-the-backend-for-the-existing-monorepo-as-a-Django-5-Django-REST-Framework-API-under-backend--1761862920774_1761862920775.txt  Pasted-Connect-the-existing-Courses-pages-to-the-Django-API-and-stop-using-any-hardcoded-mock-course-data--1761893440551_1761893440551.txt  Pasted-Design-the-Admin-Dashboard-experience-and-related-screens-while-keeping-all-existing-pages-layouts--1761851696331_1761851696331.txt  Pasted-Goal-remove-every-hardcoded-fetch-api-in-the-frontend-and-centralize-all-HTTP-calls-behind--1762088581170_1762088581170.txt  Pasted-Make-the-Courses-workflow-fully-functional-end-to-end-with-our-existing-Django-DRF-backend-and-the-1761902650418_1761902650419.txt  Pasted-Make-the-Create-Course-screen-modal-fully-functional-end-to-end-using-the-existing-Django-DRF-API--1761903950104_1761903950105.txt  Pasted-Redesign-the-Courses-Page-experience-to-be-role-based-each-role-Employee-Manager-Admin-should--1761852978718_1761852978718.txt  Pasted-Replace-the-Employees-page-s-mock-data-with-real-data-from-the-backend-and-display-only-each-person--1761895811974_1761895811974.txt  (+1 more)
backend/: requirements.txt
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
(+62 files in other folders)
