[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url==2.3.0",
    "django==5.1.4",
    "django-cors-headers==4.6.0",
    "djangorestframework==3.15.2",
    "gunicorn>=23.0.0",
    "psycopg[binary]==3.2.3",
    "pyjwt==2.10.1",
]
